# WordKit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  emptyTemplate.docx
cmake/: utils.cmake  wordkit-config.cmake.in
examples/: example.cpp
include/WordKit/: Document.h  Element.h  Paragraph.h  Run.h  SectionProperty.h  Table.h  WordKit.h  export.h
src/: Document.cpp  Document.h  Element.cpp  Element.h  Paragraph.cpp  Paragraph.h  Run.cpp  Run.h  Sample.cpp  SectionProperty.cpp  Table.cpp  Table.h
